<resources>
    <string name="app_name">Power Mart</string>
    <string name="v_1_0_0">V 1.0.0</string>
    <string name="zeamac_solutions_2023"> ZEAMAC SOLUTIONS 2023</string>
    <string name="search_hint">Search...</string>
    <string name="bottom_nav_home_title">Home</string>
    <string name="bottom_nav_category_title">Category</string>
    <string name="bottom_nav_cart_title">Cart</string>
    <string name="bottom_nav_profile_title">Profile</string>
    <string name="side_nav_home_title">Home</string>
    <string name="side_nav_profile_title">Profile</string>
    <string name="side_nav_orders_title">Orders</string>
    <string name="side_nav_wishlist_title">Wishlist</string>
    <string name="side_nav_message_title">Message</string>
    <string name="side_nav_setting_title">Settings</string>
    <string name="side_nav_login_title">Login</string>
    <string name="side_nav_logout_title">Logout</string>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="welcomeNote">Come now to get the machines you need for your daily life on a rental basis.</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="Page">LOGIN</string>
    <string name="emailhint">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forget_your_password">Forget Your Password?</string>
    <string name="or_loging_with">Or Loging With</string>
    <string name="already_an_user_login">Already An User? Login</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="favorite">Favorite</string>
    <string name="category">Category</string>
    <string name="category1">Category</string>
    <string name="web_Client_id">806103876935-0nmd5ec0jj4ga1net8se52751tkcamlo.apps.googleusercontent.com</string>

</resources>