<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/Page"
        android:textColor="@color/orange"
        android:textSize="75sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/login1" />

    <EditText
        android:id="@+id/email_login_Text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:background="@color/edit_Text_color"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/emailhint"
        android:inputType="text"
        android:paddingStart="20dp"
        android:textColorHint="@color/hint_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <EditText
        android:id="@+id/editTextPassword1"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@color/edit_Text_color"
        android:drawableLeft="@drawable/baseline_info_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"

        android:paddingStart="20dp"
        android:textColorHint="@color/hint_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/email_login_Text"
        app:layout_constraintStart_toStartOf="@+id/email_login_Text"
        app:layout_constraintTop_toBottomOf="@+id/email_login_Text" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword1"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword1" />

    <TextView
        android:id="@+id/forgot_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/forget_your_password"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/or_loging_with"
        android:textColor="@color/orange"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/forgot_text"
        app:layout_constraintStart_toStartOf="@+id/forgot_text"
        app:layout_constraintTop_toBottomOf="@+id/forgot_text" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.developer.gbuttons.GoogleSignInButton
            android:id="@+id/imageViewGoogleSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign in with Google"
            app:isDarkTheme = "true"
            android:layout_gravity="center"/>



    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="Show Password"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword1"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword1" />

</androidx.constraintlayout.widget.ConstraintLayout>